@@ -32,6 +32,20 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>0.8.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>1.10.19</version>
@@ -151,7 +165,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.5.5</version>
+			<version>2.8.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-jsonSchema</artifactId>
+			<version>2.8.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -331,14 +350,21 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+					<meminitial>128m</meminitial>
+					<maxmem>512m</maxmem>
+					<compilerArgs>
+						<!-- javac arguments -->
+						<!-- <arg>-verbose</arg> -->
+						<!-- <arg>-Xlint:all,-options,-path</arg> -->
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
-				<!-- jetty:stop jetty:run -->
+				<!-- jetty:stop jetty:run jetty:run-forked -->
 				<!-- -Xdebug -Xrunjdwp:transport=dt_socket,server=y,address="5005" -->
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.2.3.v20140905</version>
+				<version>9.3.13.v20161014</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.hsqldb</groupId>
@@ -352,8 +378,19 @@
 					<contextPath>/</contextPath>
 					<jettyXml>target/classes/jetty.xml</jettyXml>
 					<reload>manual</reload>
-					<jvmArgs>-Xms128m -Xmx512m -XX:MaxPermSize=128m -XX:+UseParNewGC
-						-XX:+UseConcMarkSweepGC</jvmArgs>
+					<!-- MEMORY -->
+					<!-- Heap Area : -Xms -Xmx -->
+					<!-- Method Area : -XX:PermSize -XX:MaxPermSize -->
+					<!-- Java Stack Area : -Xss -->
+					<!-- GARBAGE COLLECTOR -->
+					<!-- Multi-threaded young generation garbage collector : -XX:+UseParNewGC -->
+					<!-- Enable concurrent collector, Auto Enables ParNewGC by default : 
+						-XX:+UseConcMarkSweepGC -->
+					<!-- How many time a object survives from gc before moving into old 
+						gen -XX:InitialTenuringThreshold -->
+					<jvmArgs>-Djavax.servlet.request.encoding=UTF-8 -Dfile.encoding=UTF-8" -Dfile.encoding=UTF-8 -Xms128m -Xmx2048m -XX:PermSize=512m -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:InitialTenuringThreshold=7</jvmArgs>
+					<!-- Responsive : how fast u can cook a food ? -->
+					<!-- Throughput : how many u can distribute a food ? -->
 				</configuration>
 				<executions>
 					<execution>
